# proc-mon

./: .gitignore  Cargo.toml  README.md
app/: Trunk.toml  package.json
app/src/: app.rs
app/src-tauri/: Cargo.toml
app/src-tauri/src/: main.rs
proc-mon/: Cargo.toml  index.html  tailwind.config.js
proc-mon-sys/: Cargo.toml  build.rs
proc-mon-sys/src/: lib.rs
proc-mon/src/: app.rs  lib.rs
proc-mon/src-tauri/: Cargo.toml  tauri.conf.json
proc-mon/src-tauri/src/: main.rs
proc-mon/style/: tailwind.css
shared-types/: Cargo.toml
shared-types/src/: lib.rs
